funland/synapse/synapse/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: synapse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: synapse
  labels:
    app: synapse
spec:
  selector:
    matchLabels:
      app: synapse
  replicas: 1
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - name: synapse
        image: ghcr.io/element-hq/synapse:v1.139.0
        # securityContext:
        #   capabilities:
        #     drop: [ALL]
        #   readOnlyRootFilesystem: true
        #   privileged: false
        #   allowPrivilegeEscalation: false
        #   runAsNonRoot: true
        #   seccompProfile:
        #     type: RuntimeDefault
        ports:
        - containerPort: 8008
        volumeMounts:
        - mountPath: /data
          name: synapse-data
        - mountPath: /data/homeserver.yaml
          name: synapse-config
          subPath: homeserver.yaml
        - mountPath: /data/batlab.io.log.config
          subPath: batlab.io.log.config
          name: synapse-logging
        resources:
          limits:
            cpu: "1"
            memory: 4Gi
            ephemeral-storage: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
            ephemeral-storage: 16Mi
      volumes:
        - name: synapse-data
          persistentVolumeClaim:
            claimName: synapse-data
        - name: synapse-config
          secret: 
            secretName: synapse-config
        - name: synapse-logging
          configMap:
            name: synapse-logging
