funland/synapse/synapse/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-client
  namespace: synapse
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "matrix.batlab.io"
  rules:
    - backendRefs:
        - name: synapse
          port: 8008
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: matrix-federation
#   namespace: synapse
# spec:
#   parentRefs:
#     - name: external
#       namespace: gateway
#       sectionName: matrix-federation
#   hostnames:
#     - "matrix.batlab.io"
#   rules:
#     - backendRefs:
#         - name: synapse
#           port: 8008
