funland/synapse/synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  namespace: synapse
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: matrix.batlab.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 8008
